--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf_8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>GwanYong's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+  </head>
+</html>
