--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
     <title>GwanYong's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
+  <body>
+    <h1>This is a first level heading in HTML.</h1>
+    <h2>This is a second level heading in HTML.</h2>
+    <h3>This is a third level heading in HTML.</h3>
+    <p>This is a <em>paragraph</em> As you can see, I placed an emphasis on the word "paragraph".</p>
+  </body>
 </html>
