--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf_8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GwanYong's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
     <h1>This is a first level heading in HTML.</h1>
